src/Diamante/DeskBundle/Resources/public/css/diam.css
.diam-attachments {
    position: relative;
}
.diam-attachment {
    float: left;
    margin: 0 0 2em 2em;
    width: 200px;
    text-align: center;
    border: 1px #e5e5e5 solid;
    border-radius: 5px;
}
.diam-attachment strong {
    font-weight: normal;
    display: block;
    margin-right: 4em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.diam-attachment figure {
    margin: 1em;
}
.diam-attachment-preview {
    white-space: nowrap;
    font-size: 0;
    height: 172px;
    width: 172px;
    position: relative;
}
.diam-attachment-label {
    position: absolute;
    text-transform: uppercase;
    font-size: 18px;
    width:100%;
    text-align: center;
    top:110px;
    color: #fff;
    left:0;
    opacity: .9;
    text-shadow: 0 0 2px #eee;
    font-weight: 100;
}
.diam-attachment-preview:before,
.diam-attachment-preview:after{
    content: "";
    display: inline-block;
    height: 100%;
    width: 1px;
    vertical-align: middle;
}
.diam-attachment-preview:before {
    margin-left: -1px;
}
.diam-attachment-preview:after {
    margin-right: -1px;
}
.diam-attachment img {
    max-width: 100%;
    max-height: 100%;
}
.diam-attachment figcaption {
    text-align: left;
    padding: .6em 0;
}

#diam-default-branch-message i {
    color: red;
}

.diam-comments {
    margin: 0 0 1em;
}

.diam-comment {
    padding: 1em;
    padding-left: 6.5em ;
}

.diam-comment:nth-child(odd) {
    background: #fafafa;
}

.diam-comment:hover {
    background: #eee;
}

.diam-comment-user-image {
    float: left;
    margin-left: -5.5em;
}
.diam-comment-meta {
    margin: 0 0 .8em;
}
.diam-comment-attachments-box {
    margin: .8em 0 0;
}
.diam-comment:after {
    content: "";
    clear: both;
    display: table;
}

.diam-comment-form-attachments {
    width: 294px;
    padding: 5px;
    background: #fafafa;
    border-radius: 5px;
}
.diam-comment-form-attachments .diam-comment-attachments {
    margin: 0;
}

/**
 * Drag&Drop zone
 */
.diam-dropzone {
    float: left;
    margin: 0 0 2em 2em;
    width: 200px;
    text-align: center;
    border: 1px #e5e5e5 solid;
    border-radius: 5px;
}

.diam-dropzone-placeholder {
    margin: 1em;
    overflow: hidden;
    position: relative;
    height: 208px;
}

.diam-dropzone label {
    position: absolute;
    top:50%;
    left:50%;
    margin: -44px 0 0 -55px;
    text-align: center;
    text-transform: uppercase !important;
    color: #ccc;
    width: 110px;
    height: 88px;
}
.diam-dropzone i[class^='icon'] {
    font-size: 500%;
    display: block !important;
}
.diam-dropzone-active {
    position: absolute;
    width: auto;
    background: #eee;
    margin: 0;
    top:0;
    bottom: 2em;
    left: 2em;
    right: 2em;
    opacity: .9;
}
.diam-dropzone-active .diam-dropzone-placeholder {
    margin: 0;
    height: 100%;
}
.diam-dropzone-active label {
    color: #000;
}

.diam-attachment-placeholder {
    display: none;
}
.diam-dropzone-active + .diam-attachment-placeholder {
    display: block;
}
.diam-attachment-placeholder .diam-dropzone-placeholder {
    z-index: -1;
}

.diam-dropzone input {
    position: absolute;
    width: 100%;
    height: 100%;
    font-size: 1000%;
    line-height: 200%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    float: right;
    border: none;
    cursor: pointer;
    opacity: 0;
    z-index: 10;
}

.diam-dropzone-loader {
    display: none;
    position: absolute;
    top:50%;
    left:50%;
    text-align: center;
    margin: -35px 0 0 -35px;
    color: #ccc;
    width: 70px;
    height: 70px;
}

.diam-attachment-new {
    background: rgba(238, 238, 238, 1);
    -webkit-animation: blink 500ms step-start 0s 5;
    -moz-animation: blink 500ms  step-start 0s 5;
    animation: blink 500ms  step-start 0s 5;
}

.key-cell{
    white-space: nowrap
}

.diam-branch-grid th.string-cell, td.string-cell{
    vertical-align: middle;
}

@keyframes blink {
    0% { background: rgba(238, 238, 238, 1); }
    50% { background: rgba(238, 238, 238, .1); }
    100% { background: rgba(238, 238, 238, 1); }
}
@-moz-keyframes blink {
    0% { background: rgba(238, 238, 238, 1); }
    50% { background: rgba(238, 238, 238, .1); }
    100% { background: rgba(238, 238, 238, 1); }
}
@-webkit-keyframes blink {
    0% { background: rgba(238, 238, 238, 1); }
    50% { background: rgba(238, 238, 238, .1); }
    100% { background: rgba(238, 238, 238, 1); }
}

#diam-default-branch-message {
    padding: 5px;
    text-align: center;
    font-weight: 700;
}

.ui-multiselect-menu.ui-widget {
    display: none;
}

.oro-clearfix-width:after, .oro-clearfix:after {
    clear: none;
}

.diam-tickets .row-click-action > .datetime-cell,
.diam-tickets .row-click-action > .select-row-cell,
.diam-tickets .row-click-action > .action-cell {
    vertical-align: middle;
}

.diam-tickets .row-click-action > .string-cell:nth-child(2) {
    width: 5%;
}

.control-label > span, .responsive-cell > span {
    font-style: italic;
}

.diam-ticket-description,
#diamante_branch_form_description {
    width: 600px;
}

.diam-branch-grid .action-cell {
    vertical-align: middle !important;
}

.diam-comment-meta span {
    background-color: #bcbcbc;
    padding: 1px 5px;
    border-radius: 2px;
    color: #fff;
}

.tag-inline {
    padding: 3px;
    background-color: #EDD0CD;
    border-radius: 5px;
    border: 1px solid #BAA09D;
}

.dropdown.btn-group.open {
    position: absolute;
}

.deleted-reporter {
    text-decoration: line-through;
}

.mce-tinymce + .diam-ticket-description {
    display: block !important;
    position: absolute;
    padding: 0;
    border: 0;
    opacity: 0;
    width:1px;
    height: 1px;
    left:-999em;
}

.validation-error .mce-tinymce.mce-panel {
    border: 1px solid #e9322d;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(211,33,33,0.6);
    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(211,33,33,0.6);
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(211,33,33,0.6);
}

